# mousebot

./: .gitignore  .npmignore  .prettierrc.js  .travis.yml  README.md  package-lock.json  package.json  tsconfig.json
docs/: globals.html  index.html
docs/assets/js/: search.js
docs/classes/: _index_.bot.html
docs/modules/: _index_.html
lib/: index.ts
native/: Cargo.toml
native/src/: lib.rs
src/: index.ts
